--- a/app/src/main/res/layout/activity_ver_persona.xml
+++ b/app/src/main/res/layout/activity_ver_persona.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".personas.PersonaConectActivity">
+    android:layout_height="match_parent">
 
     <!--- barra Atras-->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/contLayoutSuperior"
         android:layout_width="0dp"
-        android:layout_height="45dp"
+        android:layout_height="40dp"
         android:background="@color/colorBlanco"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,23 +18,25 @@
             android:id="@+id/btnAtras"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="5dp"
             android:background="@color/colorBlanco"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="?attr/actionModeCloseDrawable" />
+            app:srcCompat="?attr/actionModeCloseDrawable"
+            android:layout_marginLeft="10dp" />
     </androidx.constraintlayout.widget.ConstraintLayout>
+    <!--- fin barra Atras-->
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="684dp"
-        android:layout_marginTop="45dp"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.761"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/contLayoutSuperior">
+        app:layout_constraintTop_toBottomOf="@+id/contLayoutSuperior"
+        app:layout_constraintVertical_bias="0.0">
 
         <ImageView
             android:id="@+id/id_imagen_persona_Act"
@@ -45,7 +45,6 @@
             android:background="@color/colorBlanco"
             android:scaleType="center"
             app:layout_constraintStart_toStartOf="parent">
-
         </ImageView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
