--- a/app/src/main/res/layout/cardview_item_persona.xml
+++ b/app/src/main/res/layout/cardview_item_persona.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/id_cardViewPersona"
-    android:layout_width="180dp"
+    android:layout_width="match_parent"
     android:layout_height="250dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="10dp"
@@ -20,19 +20,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/colorBlanco"
-            android:scaleType="centerCrop"></ImageView>
+            android:scaleType="centerCrop">
+        </ImageView>
 
-        <TextView
-            android:id="@+id/id_persona_nombre"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="Persona Nombre"
-            android:textColor="@color/colorPrimary"
-            android:textSize="10sp"
-            android:textStyle="bold"
-            android:background="@color/colorCintaCard"
-            android:gravity="center">
-        </TextView>
 
     </LinearLayout>
 </androidx.cardview.widget.CardView>
