--- a/app/src/main/res/layout/activity_listar_categorias.xml
+++ b/app/src/main/res/layout/activity_listar_categorias.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".categorias.ListarCategoriasActivity">
 
     <!--- barra Atras-->
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -33,7 +34,7 @@
             android:layout_height="wrap_content"
             android:foregroundGravity="center"
             android:gravity="center_horizontal"
-            android:text="@string/TituloBarraLista"
+            android:text="@string/TituloBarraCategorias"
             android:textAlignment="center"
             android:textColor="@color/colorNegro"
             android:textSize="18sp"
@@ -68,7 +69,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/id_recyclerView_persona"
+                android:id="@+id/id_recyclerView_listaCategorias"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:layout_constraintTop_toTopOf="parent"
