--- a/app/src/main/res/layout/cardview_item_listar_categoria.xml
+++ b/app/src/main/res/layout/cardview_item_listar_categoria.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/id_cardViewCategoria"
-    android:layout_width="80dp"
-    android:layout_height="80dp"
+    android:id="@+id/id_cardView_ListarCategoria"
+    android:layout_width="match_parent"
+    android:layout_height="250dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="10dp"
     app:cardCornerRadius="10dp"
@@ -16,19 +16,19 @@
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/id_categoria_img"
+            android:id="@+id/id_img_listar_categoria"
             android:layout_width="match_parent"
-            android:layout_height="65dp"
+            android:layout_height="220dp"
             android:scaleType="centerCrop"
             android:background="@color/colorBlanco">
         </ImageView>
         <TextView
-            android:id="@+id/id_categoria_nombre"
+            android:id="@+id/id_nombre_listar_categoria"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="Categoria Nombre"
             android:textColor="@color/colorPrimary"
-            android:textSize="10sp"
+            android:textSize="15sp"
             android:textStyle="bold"
             android:background="@color/colorCintaCard"
             android:gravity="center">
