--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,77 +4,100 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".MainActivity">
 
+    <!--- Toolbar-->
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar_Home"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/TituloBarraHome"
+            android:layout_gravity="center"
+            android:textColor="@color/black"
+            android:textSize="14sp"
+            android:textStyle="bold"
+            android:id="@+id/toolbar_title" />
+    </androidx.appcompat.widget.Toolbar>
+    <!--- Fin Toolbar-->
 
-    <!--- caja categorias-->
+
+    <!--- caja fotos Categorias -->
 
     <TextView
-        android:id="@+id/textView10"
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="18dp"
         android:layout_marginLeft="5dp"
+        android:layout_marginTop="15dp"
         android:text="@string/NuestrasCategorias"
-        android:textStyle="bold"
-        android:textColor="@color/colorNegro"
+        android:textColor="@color/black"
         android:textSize="13sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.045"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbar_Home" />
 
     <LinearLayout
         android:id="@+id/contLayoutFoto"
         android:layout_width="match_parent"
         android:layout_height="90dp"
-        android:layout_marginTop="4dp"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:paddingLeft="0dp"
+        android:paddingRight="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView10">
+        app:layout_constraintTop_toBottomOf="@+id/textView">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/id_recyclerView_Home_Categorias"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-        </androidx.recyclerview.widget.RecyclerView>
+            android:orientation="horizontal"></androidx.recyclerview.widget.RecyclerView>
     </LinearLayout>
-
 
     <!--- caja fotos recomendadas -->
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginLeft="5dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:text="@string/FotosRecomendadas"
-        android:textColor="@color/colorNegro"
-        android:textStyle="bold"
+        android:textColor="@color/black"
         android:textSize="13sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/contLayoutInformacion"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.056"
+        app:layout_constraintHorizontal_bias="0.073"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/contLayoutFoto"
-        app:layout_constraintVertical_bias="0.004">
-    </TextView>
+        app:layout_constraintVertical_bias="0.0" />
 
     <LinearLayout
         android:id="@+id/contLayoutInformacion"
         android:layout_width="match_parent"
-        android:layout_height="350dp"
-        android:layout_marginTop="30dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="250dp"
+        android:layout_marginBottom="150dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/contLayouyBarraNav"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/contLayoutFoto"
-        app:layout_constraintVertical_bias="0.0">
-
+        app:layout_constraintVertical_bias="1.0">
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/id_recyclerView_producto_recomendado"
             android:layout_width="match_parent"
@@ -84,8 +107,9 @@
             android:paddingTop="0dp"
             app:layout_constraintTop_toTopOf="parent"
             tools:layout_editor_absoluteX="-1dp"></androidx.recyclerview.widget.RecyclerView>
-    </LinearLayout>
 
+
+    </LinearLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/contLayouyBarraNav"
@@ -95,7 +119,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/contLayoutInformacion"
         app:layout_constraintVertical_bias="1.0">
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
@@ -108,7 +131,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:backgroundTint="@color/colorBlanco"
+            app:backgroundTint="@color/white"
             app:itemIconTint="@color/black"
             app:menu="@menu/btn_nav_menu" />
     </androidx.constraintlayout.widget.ConstraintLayout>
