--- a/app/src/main/res/layout/cardview_item_home_categorias.xml
+++ b/app/src/main/res/layout/cardview_item_home_categorias.xml
@@ -27,7 +27,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="Categoria Nombre"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@color/black"
             android:textSize="10sp"
             android:textStyle="bold"
             android:background="@color/colorCintaCard"
